--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
-    "ws": "~0.4.31"
+    "ws": "~0.4.31",
+    "johnny-five": "0.7.5"
   }
 }
